Incluido a função javascript para a troca de cor do cabeçalho da tabela.

--- a/assets/css/estilo.css
+++ b/assets/css/estilo.css
@@ -6,7 +6,7 @@ html{font-family:sans-serif;-webkit-text-size-adjust:100%;-ms-text-size-adjust:1
 body{margin:0}
 table{border-spacing:0;border-collapse:collapse; width: 50%;Margin-left:20px; margin-top:20px}td,th{padding:0}
 th{
-    text-align: center;font-weight: bold; color:#1500db!important; //recomendo incluir importante, quando não quero que o usuário mude direto na fonte.
+    text-align: center;font-weight: bold; color:#1500db;
 }
 
 
